--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "highcharts": "^11.4.0",
     "highcharts-angular": "^4.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
